# GutFood

./: .gitignore  README.md
backend/: pyproject.toml  requirement.txt
backend/FoodProject/: db.sqlite3  manage.py  new1.py  new2.py  new3.py  new4.py
backend/FoodProject/FoodProject/: asgi.py  settings.py  urls.py  wsgi.py
backend/FoodProject/foodapp/: forms.py  models1.py  utils.py  views.py
backend/FoodProject/foodapp/migrations/: 0001_initial.py
backend/FoodProject/foodapp/models/: category_encoder.joblib  cooking_method_encoder.joblib  frequency_of_consumption_encoder.joblib  gender_encoder.joblib  ingredient_name_encoder.joblib  label_encoders.joblib  model.py  model_heart_disease.joblib  model_hypertension.joblib  obesity_impact_model.pkl
backend/FoodProject/foodapp/templates/: input_form.html  result.html  your_template.html
frontend/: .gitignore  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CameraModal.tsx  Chart.tsx  Chat.tsx  Header.tsx  HomePage.tsx  ImagePreview.tsx  LandingPage.tsx  MainContent.tsx  mode-toggle.tsx
frontend/src/components/Landing/: About.tsx  App.css  Contact.tsx  FeatureCards.tsx  Footer.tsx  Home.tsx  Navbar.tsx  Testimonial.tsx  (+1 more)
testing/: .env.example  Diet Recommendation System.ipynb  Quality.ipynb  Untitled2.ipynb  food.csv  pyproject.toml  quality_prediction.joblib  requirements.txt  struct_ingre.ipynb
testing/.ipynb_checkpoints/: Quality-checkpoint.ipynb  chatbot_rag_chain-checkpoint.ipynb
