[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.2",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "google-generativeai>=0.8.3",
    "python-dotenv>=1.0.1",
]
